--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>struts-to-spring</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<name>struts-to-spring</name>
 	<packaging>war</packaging>
@@ -18,6 +18,12 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
+	<scm>
+   		<connection>scm:git:ssh://git@github.com:jeffellin/strutstospring.git</connection>
+   		<url>github.com/jeffellin/strutstospring.git</url>
+   		<developerConnection>scm:git:ssh://git@github.com:jeffellin/strutstospring.git</developerConnection>
+	</scm>
 
 	<dependencies>
 		<dependency>
@@ -92,7 +98,5 @@
 	</build>
 
 
-  <scm>
-    <tag>struts-to-spring-0.0.1</tag>
-  </scm>
+  
 </project>
