--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
 	</properties>
 
 	<scm>
-   		<connection>scm:git:ssh://git@github.com:jeffellin/strutstospring.git</connection>
-   		<url>scm:git:ssh://git@github.com:jeffellin/strutstospring.git</url>
-   		<developerConnection>scm:git:ssh://git@github.com:jeffellin/strutstospring.git</developerConnection>
+   		<connection>scm:git:ssh://git@github.com/jeffellin/strutstospring.git</connection>
+   		<url>scm:git:ssh://git@github.com/jeffellin/strutstospring.git</url>
+   		<developerConnection>scm:git:ssh://git@github.com/jeffellin/strutstospring.git</developerConnection>
 	  <tag>struts-to-spring-0.0.2</tag>
   </scm>
 
