--- a/release.properties
+++ b/release.properties
@@ -1,9 +1,9 @@
 #release configuration
-#Mon Aug 10 13:54:41 EDT 2020
+#Mon Aug 10 13:58:55 EDT 2020
 project.scm.com.example\:struts-to-spring.developerConnection=scm\:git\:ssh\://git@github.com\:jeffellin/strutstospring.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=struts-to-spring-0.0.1
-project.rel.com.example\:struts-to-spring=0.0.1
+scm.tag=struts-to-spring-0.0.2
+project.rel.com.example\:struts-to-spring=0.0.2
 pushChanges=true
 scm.url=scm\:git\:ssh\://git@github.com\:jeffellin/strutstospring.git
 preparationGoals=clean verify
@@ -11,8 +11,8 @@ project.scm.com.example\:struts-to-spring.tag=HEAD
 remoteTagging=true
 projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
-project.scm.com.example\:struts-to-spring.url=github.com/jeffellin/strutstospring.git
+project.scm.com.example\:struts-to-spring.url=scm\:git\:ssh\://git@github.com\:jeffellin/strutstospring.git
 project.scm.com.example\:struts-to-spring.connection=scm\:git\:ssh\://git@github.com\:jeffellin/strutstospring.git
 exec.snapshotReleasePluginAllowed=false
-completedPhase=scm-commit-release
-project.dev.com.example\:struts-to-spring=0.0.2-SNAPSHOT
+completedPhase=run-preparation-goals
+project.dev.com.example\:struts-to-spring=0.0.3-SNAPSHOT
